# test-driven-development

./: .gitignore  README.md  pyproject.toml
functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py  tests.py
lists/: forms.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_auto_20221014_1504.py  0004_auto_20221016_0605.py
lists/static/: base.css
lists/static/tests/: tests.html
lists/templates/: base.html  home.html  list.html
lists/tests/: test_forms.py  test_models.py  test_views.py
superlists/: settings.py  urls.py
tests/: functional_tests.py
