[tool.poetry]
name = "test-driven-development"
version = "0.1.0"
description = ""
authors = ["YugandharG <yugandharg@ftcsolar.com>"]
readme = "README.md"
packages = [{include = "test_driven_development"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
