[tool.poetry]
name = "test-driven-development"
version = "0.1.0"
description = ""
authors = ["YugandharG <yugandharg@ftcsolar.com>"]
readme = "README.md"
packages = [{include = "test_driven_development"}]

[tool.poetry.dependencies]
python = "^3.6"
selenium = "3.141.0"
django = "1.11.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
